<resources>
    <string name="app_name">WordFox</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="reset">RESET</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="submit">SUBMIT</string>
    <string name="shuffle">SHUFFLE</string>
    <string name="Users_best_guess">Your Guess</string>
    <string name="word_length">Word Length</string>
    <string name="title_activity_score_screen1">ScoreScreen1Activity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_profile">Profile</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_score_screen2">ScoreScreen2Activity</string>
    <string name="title_activity_data_screen">Profile Data</string>
    <string name="profile">Profile</string>
    <string name="ScoreScreen2ActivityLabel">Result Summary</string>
    <string name="DataScreenActivityLabel">Profile Data</string>
    <string name="SettingsActivityLabel">Settings</string>
    <string name="title_activity_player_switch">PlayerSwitchActivity</string>
    <string name="title_activity_end_screen_single_player1">Final Results</string>
    <string name="title_activity_data">DataActivity</string>
    <string name="title_activity_data_page">DataPageActivity</string>
    <string name="home_button_text">Home</string>
    <string name="next_button_text">Next</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="Tag6player">6players</string>
    <string name="Tag4player">4players</string>
    <string name="Tag5player">5players</string>
    <string name="Tag3player">3players</string>
    <string name="Tag1player">1players</string>
    <string name="Tag2player">2players</string>
    <string name="title_activity_round_end_screen">Results</string>
    <string name="you_scored">You scored</string>
    <string name="no_games_played_profile">No games played!</string>
    <string name="title_activity_local_wifi">Local Wifi</string>
    <string name="test_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="game_end_banner_ad_unit_id">ca-app-pub-5181377347442835/9136484888</string>
    <string name="data_page_banner_ad_unit_id">ca-app-pub-5181377347442835/9069160957</string>
    <string name="end_of_round3_banner_ad_unit_id">ca-app-pub-5181377347442835/4199977656</string>
    <string name="profile_page_banner_ad_unit_id">ca-app-pub-5181377347442835/8686017575</string>

    <string name="admob_app_id">ca-app-pub-5181377347442835~1259786879</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="just_me">Just Me</string>
    <string name="with_friends">With Friends</string>
    <string name="pass_and_play"><![CDATA[Pass & Play]]></string>
    <string name="title_activity_pass_and_play">Pass and Play</string>
    <string name="title_activity_swap">Pass and Play</string>
    <string name="title_activity_swap_choose">Pass and Play</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="justme_explanation_text">Race against the clock to find the longest word</string>
    <string name="with_friends_explanation_text">Play with your friends using wifi direct even without an internet connection</string>
    <string name="pass_and_play_explanation_text">Play with up to 5 friends all sharing this phone</string>
    <string name="longest_words_minor_heading">Longest possible word from each round</string>
    <string name="choose_your_number_of_players_using_the_slider">Choose your \nnumber of players \nusing the slider</string>
    <string name="wifi_nearby_players_list_heading">Nearby list of players ...</string>
    <string name="content_swap_fox_instructions">Pass the game \n to the \n next player</string>
    <string name="data_fox_speech">Choose any player below to see their game data! You can see every game you played and word you found!</string>
    <string name="content_home_screen_fox_instructions">Choose your game\n type from the\n 3 options</string>
    <string name="game_rank">Game Rank:</string>
    <string name="data">Data</string>
    <string name="no_existing_players">There are no existing players to choose from.</string>
    <string name="title_activity_rank_detail">Game Ranks</string>
</resources>
