<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomeScreen"
    tools:showIn="@layout/app_bar_home_screen">


    <Button
        android:id="@+id/just_me_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/just_me"
        app:layout_constraintBottom_toTopOf="@+id/with_friends_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/with_friends_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/with_friends"
        app:layout_constraintBottom_toTopOf="@+id/pass_and_play_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/just_me_button" />

    <Button
        android:id="@+id/pass_and_play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_and_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/with_friends_button" />
</android.support.constraint.ConstraintLayout>