<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".PassAndPlay"
    tools:showIn="@layout/app_bar_pass_and_play">

    <ImageButton
        android:id="@+id/fox2Button"
        style="@style/homeNumPLayersButtons"
        android:layout_width="@dimen/action_button_dimension"
        android:layout_height="@dimen/action_button_dimension"
        android:cropToPadding="false"
        android:onClick="setNumPlayers"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/fox2"
        android:tag="@string/Tag2player"
        app:layout_constraintBottom_toTopOf="@id/fox5Button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/fox3Button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/fox3Button"
        style="@style/homeNumPLayersButtons"
        android:layout_width="@dimen/action_button_dimension"
        android:layout_height="@dimen/action_button_dimension"
        android:cropToPadding="false"
        android:onClick="setNumPlayers"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/fox3"
        android:tag="@string/Tag3player"
        app:layout_constraintBottom_toBottomOf="@+id/fox2Button"
        app:layout_constraintLeft_toRightOf="@id/fox2Button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/fox2Button" />

    <ImageButton
        android:id="@+id/fox5Button"
        style="@style/homeNumPLayersButtons"
        android:layout_width="@dimen/action_button_dimension"
        android:layout_height="@dimen/action_button_dimension"
        android:cropToPadding="false"
        android:onClick="setNumPlayers"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/fox5"
        android:tag="@string/Tag5player"
        app:layout_constraintBottom_toTopOf="@id/bStartPAP"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fox2Button" />

    <ImageButton
        android:id="@+id/fox4Button"
        style="@style/homeNumPLayersButtons"
        android:layout_width="@dimen/action_button_dimension"
        android:layout_height="@dimen/action_button_dimension"
        android:cropToPadding="false"
        android:onClick="setNumPlayers"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/fox4"
        android:tag="@string/Tag4player"
        app:layout_constraintBottom_toBottomOf="@id/fox5Button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/fox5Button"
        app:layout_constraintTop_toTopOf="@id/fox5Button" />

    <ImageButton
        android:id="@+id/fox6Button"
        style="@style/homeNumPLayersButtons"
        android:layout_width="@dimen/action_button_dimension"
        android:layout_height="@dimen/action_button_dimension"
        android:cropToPadding="false"
        android:onClick="setNumPlayers"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/fox6"
        android:tag="@string/Tag6player"
        app:layout_constraintBottom_toBottomOf="@id/fox5Button"
        app:layout_constraintLeft_toRightOf="@id/fox5Button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/fox5Button" />

    <Button
        android:id="@+id/bStartPAP"
        style="@style/RectangularButtons"
        android:fontFamily="@font/arial_ff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="start"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>