<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:activity="capsicum.game.wordfox.MainActivity"
    tools:showIn="@layout/app_bar_main">
    <!--tools:context=".MainActivity"-->

    <ImageButton
        android:id="@+id/fox2Button"
        style="@style/homeNumPLayersButtons"
        android:layout_width="@dimen/action_button_dimension"
        android:layout_height="@dimen/action_button_dimension"
        android:layout_marginTop="8dp"
        android:cropToPadding="false"
        android:onClick="setNumPlayers"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/fox2"
        android:tag="@string/Tag2player"
        app:layout_constraintBottom_toTopOf="@id/fox5Button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/fox1Button"
        style="@style/homeNumPLayersButtons"
        android:layout_width="@dimen/action_button_dimension"
        android:layout_height="@dimen/action_button_dimension"
        android:layout_marginTop="8dp"
        android:cropToPadding="false"
        android:onClick="setNumPlayers"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/fox1"
        android:tag="@string/Tag1player"
        app:layout_constraintBottom_toTopOf="@id/fox4Button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/fox2Button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/fox3Button"
        style="@style/homeNumPLayersButtons"
        android:layout_width="@dimen/action_button_dimension"
        android:layout_height="@dimen/action_button_dimension"
        android:layout_marginTop="8dp"
        android:cropToPadding="false"
        android:onClick="setNumPlayers"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/fox3"
        android:tag="@string/Tag3player"
        app:layout_constraintBottom_toTopOf="@id/fox6Button"
        app:layout_constraintLeft_toRightOf="@id/fox2Button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/fox5Button"
        style="@style/homeNumPLayersButtons"
        android:layout_width="@dimen/action_button_dimension"
        android:layout_height="@dimen/action_button_dimension"
        android:layout_marginTop="8dp"
        android:cropToPadding="false"
        android:onClick="setNumPlayers"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/fox5"
        android:tag="@string/Tag5player"
        app:layout_constraintBottom_toTopOf="@+id/bStartGame"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fox2Button" />

    <ImageButton
        android:id="@+id/fox4Button"
        style="@style/homeNumPLayersButtons"
        android:layout_width="@dimen/action_button_dimension"
        android:layout_height="@dimen/action_button_dimension"
        android:layout_marginTop="8dp"
        android:cropToPadding="false"
        android:onClick="setNumPlayers"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/fox4"
        android:tag="@string/Tag4player"
        app:layout_constraintBottom_toTopOf="@id/bStartGame"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/fox5Button"
        app:layout_constraintTop_toBottomOf="@id/fox1Button" />

    <ImageButton
        android:id="@+id/fox6Button"
        style="@style/homeNumPLayersButtons"
        android:layout_width="@dimen/action_button_dimension"
        android:layout_height="@dimen/action_button_dimension"
        android:layout_marginTop="8dp"
        android:cropToPadding="false"
        android:onClick="setNumPlayers"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/fox6"
        android:tag="@string/Tag6player"
        app:layout_constraintBottom_toTopOf="@id/bStartGame"
        app:layout_constraintLeft_toRightOf="@id/fox5Button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fox3Button" />

    <Button
        android:id="@+id/bStartGame"
        style="@style/RectangularButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="startGameAct"
        android:text="start"
        android:fontFamily="@font/arialroundedbold"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/bStartWifi"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bStartWifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="startWifi"
        android:text="WiFi"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/bStartGame"
        app:layout_constraintLeft_toRightOf="@+id/bStartGame"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/bStartGame" />

    <FrameLayout
        android:id="@+id/foxFrame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bStartGame"
        app:layout_constraintVertical_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:id="@+id/verticalspace1"
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:layout_weight=".15" />

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.45"
                android:orientation="horizontal">

                <Space
                    android:id="@+id/horizontalspace"
                    android:layout_width="0dp"
                    android:layout_height="10dp"
                    android:layout_weight=".6" />

                <android.support.constraint.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".3">
                    <TextView
                        android:id="@+id/speechTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="Choose your number of players!"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="10dp"
                    android:layout_weight=".1" />

            </android.support.v7.widget.LinearLayoutCompat>

            <Space
                android:id="@+id/verticalspace2"
                android:layout_width="50dp"
                android:layout_height="0dp"
                android:layout_weight="0.4" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:adjustViewBounds="true"
            android:paddingEnd="6dp"
            android:paddingRight="6dp"
            android:src="@drawable/foxnospeech" />

    </FrameLayout>

</android.support.constraint.ConstraintLayout>
